gateway/dev/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: happy-paws-route
  namespace: dev
spec:
  parentRefs:
  - name: happy-paws-gateway

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api
    backendRefs:
    - name: api-gateway
      port: 8000

  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend-web
      port: 80
